Fix heading size on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -619,7 +619,7 @@ hr{
     
   }
   h1{
-    font-size: 64px;
+    font-size: 56px;
   }
   #project-section{
     display: flex;
